--- a/src/Components/Guide/Guide.css
+++ b/src/Components/Guide/Guide.css
@@ -2,24 +2,26 @@
   position: fixed;
   top: 150px;
   left: 0;
+  overflow-y: auto;
 }
-@media (max-width: 1600px) {
+@media (max-width: 1700px) {
   .guide-contents {
     position: relative;
     top: 0px;
   }
 }
 
-.guide-contents a {
-  color: white;
-}
-
 h2:target, h3:target{
   padding-top: 100px;
 }
 
-.guide-page h2 { font-size: 1.8em; text-align: center; }
-.guide-page h3 { font-size: 1.6em; text-align: center; margin-top: 20px; margin-bottom: 10px;}
+.guide-summary h2>a { font-size: 1em; color: #44CAE4 !important; text-transform: uppercase; }
+.guide-summary h3>a { font-size: 1em; color: #b449e6 !important; }
+.guide-summary h4>a { font-size: 1em; color: white;}
+.guide-summary h5>a { font-size: 1em; }
+
+.guide-page h2 { font-size: 1.8em; text-align: center; color: #44CAE4 !important; }
+.guide-page h3 { font-size: 1.6em; text-align: center; color: #b449e6 !important; margin-top: 30px; margin-bottom: 0px;}
 .guide-page h4 { font-size: 1.4em; text-align: center; margin-top: 20px; margin-bottom: 10px;}
 .guide-page h5 { font-size: 1.2em; text-align: left; }
 .guide-page p  { font-size: 1em; text-align: justify; }
@@ -62,7 +64,7 @@ h2:target, h3:target{
 
 .guide-img {
   margin: 20px 0;
-  border-radius: 30px;
+  border-radius: 10px;
   filter: drop-shadow(0px 0px 6.75px black);
 }
 
@@ -82,16 +84,16 @@ h2:target, h3:target{
 
 .stats-img{
   width: 50%;
-  image-rendering: crisp-edges;
+  image-rendering: pixelated;
 }
 
 
 
 @media (min-width: 768px) {
-  .guide-page h2 { font-size: 1.85em;  }
+  .guide-page h2 { font-size: 1.8em;  }
   .guide-page h3 { font-size: 1.7em; }
-  .guide-page h4 { font-size: 1.55em;}
-  .guide-page h5 { font-size: 1.4em; }
+  .guide-page h4 { font-size: 1.5em;}
+  .guide-page h5 { font-size: 1.3em; }
   .guide-page p  { font-size: 1.25em; }
   .guide-page li { font-size: 1.25em; }
   .guide-page hr { margin: 40px 100px; }
@@ -100,6 +102,9 @@ h2:target, h3:target{
     padding: 20px 50px;
     filter: drop-shadow(0px 0px 6.75px black);
   }
+  .guide-img {
+    border-radius: 30px;
+  }
   .guide-video {
     width: 100%;
     border: 10px solid white;
@@ -107,17 +112,5 @@ h2:target, h3:target{
     box-shadow: 0 0 10px white;
     border-radius: 50px;
     image-rendering: auto;
-  }
-
-  .guide-video2{
-    image-rendering: smooth;
-  }
-
-  .guide-video3{
-    image-rendering: crisp-edges;
-  }
-
-  .guide-video4{
-    image-rendering: pixelated;
   }
 }
