--- a/src/Components/CharacterProfile/CharacterBio/CharacterBio.css
+++ b/src/Components/CharacterProfile/CharacterBio/CharacterBio.css
@@ -1,5 +1,5 @@
 .text-shadow-label {
-  text-shadow: 0 0 1px rgba(0, 0, 0, 1);
+  text-shadow: 0 0 2px rgba(0, 0, 0, 1);
 }
 
 /*
@@ -19,6 +19,14 @@ Saga Labels
 
 .buu-saga-label {
   background-color: #ff99ff;
+}
+.super-saga-label {
+  background-image: radial-gradient(white, yellow, orange, red);
+  background-position: 25% 75%;
+}
+
+.bog-saga-label {
+  background-image: linear-gradient(180deg , #fcb63c, #f8f0a8, #f6bd30);
 }
 
 /*
