--- a/src/Components/CharacterProfile/CharacterBio/CharacterBio.css
+++ b/src/Components/CharacterProfile/CharacterBio/CharacterBio.css
@@ -20,6 +20,7 @@ Saga Labels
 .buu-saga-label {
   background-color: #ff99ff;
 }
+
 .super-saga-label {
   background-image: radial-gradient(white, yellow, orange, red);
   background-position: 25% 75%;
@@ -27,6 +28,12 @@ Saga Labels
 
 .bog-saga-label {
   background-image: linear-gradient(180deg , #fcb63c, #f8f0a8, #f6bd30);
+}
+.rf-saga-label {
+  background-image: linear-gradient(90deg , #d0b449, #8a659f, #f6bd30);
+}
+.ft-saga-label {
+  background-image: linear-gradient(180deg , #f06e88, #727086, #4b475e);
 }
 
 /*
@@ -58,6 +65,10 @@ Race Labels
 
 .alien-race-label {
   background-color: #b7b7b7;
+}
+
+.commeson-race-label {
+  background-color: #BA009E;
 }
 
 /*
