--- a/src/Components/BattleModeBalancer/BattleModeBalancer.css
+++ b/src/Components/BattleModeBalancer/BattleModeBalancer.css
@@ -12,6 +12,13 @@
   text-align: center;
   font-weight: bold;
 }
+.bm-balancer-table thead tr td{
+  border: 3px solid white;
+}
+
+.bm-balancer-table tr td:nth-child(2){
+  border-right: 3px solid white;
+}
 
 .bm-balancer-table td{
   border: 1px solid white;
