--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -66,3 +66,43 @@
     margin-bottom: 50px;
   }
 }
+
+
+
+
+.home-square {
+  width: 100%;
+  max-width: 400px;
+  margin: 10px;
+}
+
+.home-box {
+  max-width: 300px;
+  min-height: 300px;
+  max-height: 300px;
+  height: 100%;
+}
+
+@media (max-width: 992px) {
+  .home-box {
+    min-height: 350px;
+  }
+}
+
+@media (max-width: 768px) {
+  .home-box {
+    min-height: 100%;
+    margin: 0 auto;
+  }
+  .home-square-container {
+    flex-direction: column;
+    justify-content: center;
+    align-content: center;
+    align-items: center;
+  }
+}
+
+
+.text-orange {
+  color: orange;
+}
