add new namek chars

--- a/src/Components/CharacterProfile/CharacterStats/CharacterStats.css
+++ b/src/Components/CharacterProfile/CharacterStats/CharacterStats.css
@@ -74,6 +74,11 @@
   background: yellow;
   right: 30px;
 }
+.power-up-agile {
+  color: white;
+  background: white;
+  right: 5px;
+}
 .power-up-ultimate {
   color: white;
   background: white;
