--- a/src/Components/CharacterList/CharacterCard/CharacterCard.css
+++ b/src/Components/CharacterList/CharacterCard/CharacterCard.css
@@ -128,6 +128,16 @@
   justify-content: center;
 }
 
+@media (max-width: 768px) {
+  .char-profile-anime-img{
+    display: none;
+  }
+  .char-profile-anime-img img{
+    height: 100px;
+    image-rendering: smooth;
+  }
+}
+
 .char-profile-anime-img{
   margin-left: auto;
 }
