--- a/src/Components/Guide/Guide.css
+++ b/src/Components/Guide/Guide.css
@@ -53,7 +53,7 @@ h2:target, h3:target{
   margin-bottom: 20px;
 }
 
-.guide-page table, th, tr {
+.guide-page table, .guide-page th, .guide-page tr {
   border: 1px solid;
   padding: 5px;
 }
