--- a/src/Components/Tools/Rect32Calculator/Rect32Calculator.css
+++ b/src/Components/Tools/Rect32Calculator/Rect32Calculator.css
@@ -71,7 +71,7 @@
 }
 #rect32_changelog ul {
   margin-left: 0;
-  padding-left: 0;
+  padding-left: 1em;
 }
 #rect32_changelog tbody td:nth-child(1){
   white-space: nowrap;
@@ -79,4 +79,12 @@
 }
 #rect32_changelog thead td:nth-child(2){
   width: 100%;
+}
+
+#rect32_colour {
+  margin: 0 auto;
+  width: 100px;
+  height: 100px;
+  border: 5px ridge white;
+  background-color: black;
 }
