--- a/src/Components/Tools/Rect32Calculator/Rect32Calculator.css
+++ b/src/Components/Tools/Rect32Calculator/Rect32Calculator.css
@@ -83,8 +83,27 @@
 
 #rect32_colour {
   margin: 0 auto;
-  width: 100px;
-  height: 100px;
-  border: 5px ridge white;
-  background-color: black;
+  width: 100%;
+  height: 50px;
+  outline: 5px ridge white;
+  background-color: white;
+}
+
+#rect32_red {
+  outline: 2px ridge white;
+  width: 100%;
+  height: 50px;
+  background: rgb(255,0,0);
+}
+#rect32_green {
+  outline: 2px ridge white;
+  width: 100%;
+  height: 50px;
+  background: rgb(0,255,0);
+}
+#rect32_blue {
+  outline: 2px ridge white;
+  width: 100%;
+  height: 50px;
+  background: rgb(0,0,255);
 }
