--- a/src/Components/Tools/Rect32Calculator/Rect32Calculator.css
+++ b/src/Components/Tools/Rect32Calculator/Rect32Calculator.css
@@ -86,7 +86,7 @@
   width: 100%;
   height: 50px;
   outline: 5px ridge white;
-  background-color: white;
+  background-color: rgb(255,0,0);
 }
 
 #rect32_red {
@@ -99,16 +99,37 @@
   outline: 2px ridge white;
   width: 100%;
   height: 50px;
-  background: rgb(0,255,0);
+  background: rgb(0,0,0);
 }
 #rect32_blue {
   outline: 2px ridge white;
   width: 100%;
   height: 50px;
-  background: rgb(0,0,255);
+  background: rgb(0,0,0);
 }
 
 .colorSlider {
   margin-top: 10px;
   width: 90%;
+}
+
+.rect32-char {
+  width: 237px;
+  margin: 0 auto;
+  image-rendering: pixelated;
+}
+.rect32-char:after {
+  content: "";
+  width: 30px;
+  height: 30px;
+  background-color: red;
+  display: inline-block;
+}
+.bpoint {
+  position: absolute;
+  top: 105px;
+  left: 108px;
+  width: 3px;
+  height: 9px;
+  background-color: rgb(255,0,0);
 }
