--- a/src/Components/Plan/Plan.css
+++ b/src/Components/Plan/Plan.css
@@ -1,3 +1,7 @@
+.responsive-table {
+  overflow-x: auto;
+}
+
 .plan-table {
   border: 1px solid white;
   width: 100%;
@@ -22,9 +26,16 @@
 .plan-saga-table td:nth-child(2) {
   text-align: right;
 }
+.plan-saga-table td:nth-child(3) {
+  text-align: center;
+}
+.plan-saga-table td:nth-child(4) {
+  text-align: center;
+}
 
 .plan-saga-table {
   border: 0 !important;
+  margin: 0 auto;
 }
 .plan-saga-table th {
   border: 0 0 1px 0 solid white !important;
@@ -48,12 +59,20 @@ Race Labels
 .plan-android {
   color: #ff0000;
 }
-.plan-bio-android {
+
+.plan-bio-android td:nth-child(1) {
   background-image: linear-gradient(90deg, #FFED4A, #45a329, #00b0f0, #cc0099 );
   /* background: -webkit-linear-gradient(#eee, #333); */
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
+.plan-bio-android td:nth-child(2) {
+  background-image: linear-gradient(90deg, #FFED4A, #45a329, #00b0f0, #cc0099 );
+  /* background: -webkit-linear-gradient(#eee, #333); */
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
 
 .plan-buu {
   color: #ff99ff;
