--- a/src/Components/Tools/TournamentCalculator/TournamentCalculator.css
+++ b/src/Components/Tools/TournamentCalculator/TournamentCalculator.css
@@ -4,6 +4,13 @@
   cursor: pointer;
   transition: 0.3s;
   border: 2px solid transparent;
+  image-rendering: pixelated;
+}
+.tournament-grid img.disabled{
+  cursor: pointer;
+  filter: grayscale(100%);
+  opacity: 0.6;
+  border: 2px solid #ff6b6b;
 }
 .tournament-grid img:hover{
   border: 2px solid white;
@@ -20,4 +27,18 @@
   padding: 5px 5px;
   font-weight: 900;
   font-size: 20px;
+}
+
+.tournament-char {
+  width: 80px;
+  background: black;
+  height: 90px;
+}
+.tournament-char:before {
+  content: '?';
+  font-size: 45px;
+  font-weight: 900;
+  top: 20px;
+  left: 20px;
+  padding: 50px 30px;
 }
