--- a/src/Components/Tools/TournamentCalculator/TournamentCalculator.css
+++ b/src/Components/Tools/TournamentCalculator/TournamentCalculator.css
@@ -7,10 +7,11 @@
   image-rendering: pixelated;
 }
 .tournament-grid img.disabled{
-  cursor: pointer;
+  cursor: not-allowed;
   filter: grayscale(100%);
   opacity: 0.6;
   border: 2px solid #ff6b6b;
+  pointer-events: none;
 }
 .tournament-grid img:hover{
   border: 2px solid white;
@@ -41,4 +42,23 @@
   top: 20px;
   left: 20px;
   padding: 50px 30px;
+}
+
+.tournament-round-button {
+  color: white;
+  margin: 10px;
+  background: darkgreen;
+  border: 2px solid white;
+  padding: 10px 20px;
+  border-radius: 5px;
+  font-size: 16px;
+  font-weight: 600;
+  text-transform: uppercase;
+  transition: 0.3s;
+}
+.tournament-round-button:hover {
+  background: green;
+}
+.tournament-round-button-selected {
+  background: lightgreen;
 }
